@@ -5,7 +5,9 @@
   * Reorganized parsers under RDoc::Parser base class.
 * N Bug Fixes:
   * `ri Foo.bar` now looks for class methods also
-  * :section: now works again
+  * Sections work in the default template again
+  * Doesn't warn about :foo:: list item being an unrecognized directive
+  * RDoc no longer converts characters inside tt tags
 
 === 2.0.0 / 2008-04-10
 
